#105: GET /api/organization only returns base information